# CV_eurocv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: euroc_io.cpp.FA28D76F595B6F2A.idx  euroc_io.hpp.98535DF364F7E0D2.idx  main.cpp.DFAB226ECA47F174.idx
include/: euroc_io.hpp
install/: local_setup.sh  setup.sh
install/cv_cpp17_euroc_demo/share/cv_cpp17_euroc_demo/: package.bash  package.zsh
log/: latest_build
ros2_ws/src/aswar_openvins_wrapper/: CMakeLists.txt  package.xml
ros2_ws/src/aswar_openvins_wrapper/docs/: dataset_layout.md
ros2_ws/src/aswar_openvins_wrapper/launch/: run_openvins.launch.py
src/: euroc_io.cpp  main.cpp
